--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <div class="main">
     <header class="header" id="header">
-      <div class="header__light light-left">
+      <!-- <div class="header__light light-left">
         <picture>
           <source type="image/webp" srcset="images/light-left.webp">
           <img class="light-left__img" src="images/light-left.png" alt="">
@@ -87,7 +87,7 @@
           <source type="image/webp" srcset="images/light-right.webp">
           <img class="light-right__img" src="images/light-right.png" alt="">
         </picture>
-      </div>
+      </div> -->
       <div class="header__bg-wrapper">
         <div class="header__bg-inner">
           <picture>
