--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-
   <div class="preloader">
     <div class="preloader__inner">
-      <p class="preloader__title">Barberclub</p>
+      <img class="preloader__img" src="images/preload-img.jpg" alt="">
       <div class="preloader__descr">
         Загружаемся
         <span class="preloader__descr-dot preloader__descr-dot--1">.</span>
