--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Barber Shop</title>
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div class="preloader">
     <div class="preloader__inner">
-      <img class="preloader__img" src="images/preload-img.jpg" alt="">
+      <div class="preloader__title">Barberclub</div>
       <div class="preloader__descr">
         Загружаемся
         <span class="preloader__descr-dot preloader__descr-dot--1">.</span>
@@ -1037,8 +1037,8 @@
   </div>
 
 
-  <script src="js/libs.min.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/libs.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
