--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
   <title>Barber Shop</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -1069,8 +1069,8 @@
   </div>
 
 
-  <script src="js/libs.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/libs.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
