--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <div class="header__bg-inner">
           <div class="header__bg-top"></div>
           <picture>
+            <source type="image/webp" srcset="images/header-opacity2-bg-650.webp" media="(max-width: 650px)">
+            <source srcset="images/header-opacity2-bg-650.png" media="(max-width: 650px)">
             <source type="image/webp" srcset="images/header-opacity2-bg.webp">
             <img class="header__bg-inner-img" src="images/header-opacity2-bg.png" alt="">
           </picture>
@@ -52,6 +54,8 @@
           <div class="large-container">
             <div class="header__inner">
               <picture>
+                <source type="image/webp" srcset="images/header-inner-bg-650.webp" media="(max-width: 650px)">
+                <source srcset="images/header-inner-bg-650.png" media="(max-width: 650px)">
                 <source type="image/webp" srcset="images/header-inner-bg.webp">
                 <img class="header__inner-img" src="images/header-inner-bg.png" alt="">
               </picture>
@@ -85,7 +89,7 @@
                       <div class="menu-btn__line menu-btn__line--center"></div>
                       <div class="menu-btn__line menu-btn__line--bottom"></div>
                     </div>
-                    
+
                   </div>
                 </div>
               </div>
@@ -283,18 +287,27 @@
               <div class="slider-photo__items">
                 <div class="slider-photo__item">
                   <picture>
+                    <source type="image/webp" srcset="images/content/slider-photo-1-900.webp"
+                      media="(max-width: 900px)">
+                    <source srcset="images/content/slider-photo-1-900.png" media="(max-width: 900px)">
                     <source type="image/webp" srcset="images/content/slider-photo-1.webp">
                     <img src="images/content/slider-photo-1.png" alt="" class="slider-photo__img">
                   </picture>
                 </div>
                 <div class="slider-photo__item">
                   <picture>
+                    <source type="image/webp" srcset="images/content/slider-photo-1-900.webp"
+                      media="(max-width: 900px)">
+                    <source srcset="images/content/slider-photo-1-900.png" media="(max-width: 900px)">
                     <source type="image/webp" srcset="images/content/slider-photo-1.webp">
                     <img src="images/content/slider-photo-1.png" alt="" class="slider-photo__img">
                   </picture>
                 </div>
                 <div class="slider-photo__item">
                   <picture>
+                    <source type="image/webp" srcset="images/content/slider-photo-1-900.webp"
+                      media="(max-width: 900px)">
+                    <source srcset="images/content/slider-photo-1-900.png" media="(max-width: 900px)">
                     <source type="image/webp" srcset="images/content/slider-photo-1.webp">
                     <img src="images/content/slider-photo-1.png" alt="" class="slider-photo__img">
                   </picture>
@@ -529,6 +542,8 @@
                 <div class="barbers__item-inner">
                   <div class="barbers__item-img-wrapper">
                     <picture>
+                      <source type="image/webp" srcset="images/content/barber-1-740.webp" media="(max-width: 740px)">
+                      <source srcset="images/content/barber-1-740.png" media="(max-width: 740px)">
                       <source type="image/webp" srcset="images/content/barber-1.webp">
                       <img src="images/content/barber-1.png" alt="" class="barbers__item-img barbers__item-img--left">
                     </picture>
@@ -561,6 +576,8 @@
                 <div class="barbers__item-inner">
                   <div class="barbers__item-img-wrapper">
                     <picture>
+                      <source type="image/webp" srcset="images/content/barber-2-740.webp" media="(max-width: 740px)">
+                      <source srcset="images/content/barber-2-740.png" media="(max-width: 740px)">
                       <source type="image/webp" srcset="images/content/barber-2.webp">
                       <img src="images/content/barber-2.png" alt="" class="barbers__item-img barbers__item-img--center">
                     </picture>
@@ -593,6 +610,8 @@
                 <div class="barbers__item-inner">
                   <div class="barbers__item-img-wrapper">
                     <picture>
+                      <source type="image/webp" srcset="images/content/barber-3-740.webp" media="(max-width: 740px)">
+                      <source srcset="images/content/barber-3-740.png" media="(max-width: 740px)">
                       <source type="image/webp" srcset="images/content/barber-3.webp">
                       <img src="images/content/barber-3.png" alt="" class="barbers__item-img barbers__item-img--right"
                         style="margin-top: -22px">
