--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <a href="#" class="header__social-link">В Контакте</a>
                       </li>
                     </ul>
-                    <a class="header__video-btn video-btn" href="#">
+                    <a class="header__video-btn video-btn" data-fancybox href="https://www.youtube.com/watch?v=zL6ChB7BmEM">
                       <div class="video-btn__play">
                         <div class="video-btn__play-btn">
                           <div class="video-btn__play-inside-area"></div>
@@ -1025,7 +1025,7 @@
             <source type="image/webp" srcset="images/footer-man-img.webp">
             <img class="footer__box-img" src="images/footer-man-img.png" alt="">
           </picture>
-          <a class="footer__video-btn video-btn" href="#">
+          <a class="footer__video-btn video-btn" data-fancybox href="https://www.youtube.com/watch?v=zL6ChB7BmEM">
             <div class="video-btn__play">
               <div class="video-btn__play-btn">
                 <div class="video-btn__play-inside-area"></div>
